--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nock": "^1.2.1",
     "pg": "^6.1.0",
     "request": "~2.34.0",
+    "rollbar": "^0.6.3",
     "sha1": "~1.1.0",
     "timekeeper": "0.0.5",
     "twilio": "~1.6.0",
